--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     ]
   },
   "dependencies": {
-    "mocha-multi": "^1.1.3",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-scripts": "^2.1.5"
+    "mocha-multi": "^1.1.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -24,16 +24,28 @@
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
-    "babel-preset-airbnb": "^2.6.0",
+    "babel-preset-airbnb": "^5.0.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "chai": "^4.2.0",
+    "chai": "^4.3.6",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
-    "jsdom": "16.2.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "jsdom": "^20.0.1",
     "jsdom-global": "3.0.2",
-    "mocha": "^5.2.0",
-    "sinon": "^6.3.5"
+    "mocha": "^10.0.0",
+    "sinon": "^14.0.1"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
